--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">VkApp</string>
+    <string name="ShowMsg">Показать сообщение</string>
+    <string name="insertButton">Отпр</string>
     <integer name="com_vk_sdk_AppId">6701763</integer>
 </resources>
